Fix additional spacing due to hidden 'reply' links under comments Rework reply form so it works on Firefox Remove new collapse comment element, keeping the old one Fix flashing on Firefox Update jquery

--- a/style.css
+++ b/style.css
@@ -515,6 +515,9 @@ img[src="/sslyc/images/grayarrow.gif"] {
 .reply_form {
   width: 300px;
 }
+.reply_form input[type="submit"] {
+  margin: 3px;
+}
 a[href^="reply"]:visited {
   color: #000
 }
@@ -662,8 +665,9 @@ div.postlist-arrow {
   padding: 5px;
   text-align: center;
 }
+
 #alert a {
-  color #000;
+  color: #000;
 }
 
 .mourning {
@@ -816,4 +820,9 @@ body .votearrow.rotate180 {
 /* removes some extraneous spacing between comments as mentioned in issue #140 */
 .comtr td {
   padding: 0px;
+}
+
+/* hide native comment collapse */
+.togg {
+  display: none;
 }
